# sandbox-autoencoders

./: .gitignore  README.md  pyproject.toml  train.sh
src/sandbox_autoencoders/: __init__.py  audit_video_sampler.py  benchmark_video_loader.py  build_frame_shards.py  build_video_manifest.py  data.py  explorer.py  frame_shards.py  interpolate.py  local_video_data.py  model.py  render_interpolation.py  train.py  utils.py  visualize_video_samples.py
tests/: test_frame_shards.py
wandb/: latest-run
wandb/run-20260312_173409-hjjyly1c/: run-hjjyly1c.wandb
wandb/run-20260312_173409-hjjyly1c/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260312_174304-jar6z5oq/: run-jar6z5oq.wandb
wandb/run-20260312_174304-jar6z5oq/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
